# Hexabot

./: README.md  repair_launch.txt
docs/explorationAutonome/: README.md
reports/: 01_Debrief.md  02_Debrief.md  03_Debrief.md  03_Goals.md  04_Debrief.md  04_Goals.md  05_Goals.md  Debrief_18_12_19.md  Goal_08_01_20.md  Goal_18_12_19.md
workspaceRos/devel/: .catkin  .rosinstall
workspaceRos/devel/lib/pkgconfig/: phantomx_control.pc  phantomx_description.pc  phantomx_gazebo.pc
workspaceRos/devel/share/phantomx_control/cmake/: phantomx_controlConfig.cmake
workspaceRos/devel/share/phantomx_description/cmake/: phantomx_descriptionConfig.cmake
workspaceRos/devel/share/phantomx_gazebo/cmake/: phantomx_gazeboConfig.cmake
workspaceRos/src/markers_rviz/: CMakeLists.txt  README.md  package.xml
workspaceRos/src/markers_rviz/src/: basic_shapes.cpp  points_and_lines.cpp
workspaceRos/src/phantomx/phantomx_description/config/: config.rviz
workspaceRos/src/phantomx/phantomx_description/launch/: display.launch
workspaceRos/src/phantomx/phantomx_gazebo/: CMakeLists.txt  package.xml
workspaceRos/src/phantomx/phantomx_gazebo/launch/: phantomx_gazebo.launch
workspaceRos/src/phantomx/phantomx_gazebo/msg/: Fissures.msg
workspaceRos/src/phantomx/phantomx_gazebo/scripts/: fissure.py  follow_wall.py  marker_display.cpp  test.py  trace_fissure.py
workspaceRos/src/phantomx/phantomx_gazebo/src/phantomx_gazebo/: marker_display.cpp  phantomx.py
workspaceRos/src/phantomx/phantomx_markers/: CMakeLists.txt  README.md  package.xml
(+3 files in other folders)
